Fixed overflow issue.

--- a/styles.css
+++ b/styles.css
@@ -443,7 +443,7 @@ li{
     }
 }
 
-@media only screen and (max-width: 400px){
+@media only screen and (max-width: 500px){
     .sec2head{
         display: block;
         width: 200px;
