--- a/teamstyles.css
+++ b/teamstyles.css
@@ -330,7 +330,7 @@ li{
     }
 }
 
-@media only screen and (max-width: 400px){
+@media only screen and (max-width: 500px){
     .footcard{
         width: 100%;
         height: 231px;
